# ai-automation-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml
apps/: __main__.py
apps/api/: lifespan.py  main.py  router.py
apps/api/tests/v1/: __init__.py  test_monitor.py
apps/api/tests/v1/quinn/: test_slides.py
apps/api/v1/routers/: docs.py  monitor.py  rag.py
apps/api/v1/routers/ava/: messages.py
apps/api/v1/routers/quinn/: slides.py
apps/core/config/: __init__.py  settings.py
apps/core/infra/sql_alchemy/: __init__.py  base.py  db_utils.py  dependencies.py
apps/core/infra/sql_alchemy/migrations/: env.py
apps/core/infra/sql_alchemy/migrations/versions/: 2025-03-10-15-52_3cee4ddd2705.py  2025-03-10-15-55_c9cfd2471ae3.py
apps/core/middlewares/: __init__.py  ava_server_middleware.py  quinn_server_middleware.py
apps/core/providers/storage_provider/: __init__.py
apps/core/providers/storage_provider/repositories/: __init__.py  disk_storage_repository.py  s3_storage_repository.py
apps/core/providers/storage_provider/repository_interfaces/: __init__.py  storage_repository_interface.py
apps/core/utils/: files.py  google.py  gunicorn_runner.py  logger.py
apps/modules/ava/messages/controllers/: __init__.py  message_request_controller.py
apps/modules/ava/messages/infra/crew_ai/agents/: knowledge_researcher.py  people_expert.py  request_router.py  slack_communication.py
apps/modules/ava/messages/infra/crew_ai/repositories/: __init__.py  ava_messages_repository.py
apps/modules/ava/messages/infra/crew_ai/tasks/: knowledge_researcher.py  request_router.py
apps/modules/ava/messages/infra/crew_ai/tools/: ava_search_handbook_faq.py
apps/modules/ava/messages/repository_interfaces/: __init__.py  ava_messages_repository_interface.py
apps/modules/ava/messages/schemas/: __init__.py  create_message_body_schema.py
apps/modules/ava/messages/services/: __init__.py  create_message_service.py
apps/modules/quinn/llms/controllers/: __init__.py  analyze_survey_data_controller.py
apps/modules/quinn/llms/services/: __init__.py  show_analyze_survey_data_prompt_service.py
apps/modules/quinn/slides/controllers/: __init__.py  slides_charts_image_controller.py  slides_controller.py  slides_survey_data_analysis_controller.py
apps/modules/quinn/slides/schemas/: __init__.py  survey_data_analysis_schema.py
apps/modules/quinn/slides/services/: __init__.py  create_charts_image_service.py  create_llm_survey_data_analysis_service.py  create_slides_service.py
apps/modules/quinn/slides/utils/: charts.py  google_slides.py  helpers.py
apps/modules/shared/google/controllers/: __init__.py  google_drive_file_controller.py  google_slides_file_controller.py
apps/modules/shared/google/services/: copy_google_drive_file_service.py  show_google_drive_file_service.py  show_google_slides_file_service.py  update_google_drive_file_service.py  update_google_slides_file_service.py
apps/modules/shared/rag/controllers/: __init__.py  rag_resources_controller.py  resource_chunks_controller.py
apps/modules/shared/rag/infra/sql_alchemy/models/: __init__.py  resource_chunks.py  resources.py
apps/modules/shared/rag/infra/sql_alchemy/repositories/: __init__.py  ai_recommended_tools_repository.py  resource_chunks_repository.py  resources_repository.py
apps/modules/shared/rag/repository_interfaces/: __init__.py  resource_chunks_repository_interface.py  resources_repository_interface.py
apps/modules/shared/rag/schemas/: __init__.py  resource_chunk_schema.py  resource_schema.py
apps/modules/shared/rag/services/: __init__.py  create_rag_resources.py  list_resource_chunks.py
apps/tests/: conftest.py
deploy/: docker-compose.dev.yml  init-pgvector.sql
